--- a/amazon.css
+++ b/amazon.css
@@ -246,9 +246,8 @@ h4{
         background-size: cover;
         background-position: center;
         background-size: 50;
-        margin-top: 2px;
         background-image: url(images/afro.png);
-        height: 20%;
+        height: 30%;
     }
 
    .box1{
@@ -263,9 +262,9 @@ h4{
    }
 
    h4{
-    font-size: 13px;
-    margin-top: -15%;
-    color: #c3c3c3;
+    font-size: 14px;
+    margin-top: -18%;
+    color: rgb(180, 173, 175);
     text-align: center;
     font-family:"Roboto", serif;
     font-optical-sizing:auto;
